Home page text sizing issue fixed, contact us page content alignment improved

--- a/src/app/modules/home/components/home/home.component.scss
+++ b/src/app/modules/home/components/home/home.component.scss
@@ -58,6 +58,10 @@
         height: 100% !important;
         width: 100%;
     }
+
+    .hiring-type {
+        word-spacing: 5px;
+    }
 }
 
 @mixin white-gradient {
