--- a/src/styles.scss
+++ b/src/styles.scss
@@ -190,11 +190,13 @@ h2 {
 
 .sub-text {
     color: #555;
-    font-size: 1.15888889vw !important;
+    font-size: 18px !important;
+    // font-size: 1.15888889vw !important;
 }
 
 .tab-headline {
-    font-size: 3.33333333vw;
+    font-size: 54px !important;
+    // font-size: 3.33333333vw;
 }
 
 h3 {
